Update index fix 3.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,94 @@
+<!doctype html>
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Installation — web copy</title>
+  <style>
+    :root{
+      --bg:#000; --fg:#fff; --muted:#aaa;
+      --card:#000; --card-active:#444;
+      --ctrl:#111; --ctrl-hover:#1a1a1a;
+      --gap:12px; --pad:16px; --radius:10px;
+    }
+    *{ box-sizing:border-box; }
+    html,body{ margin:0; padding:0; background:var(--bg); color:var(--fg);
+      font:16px/1.45 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+    }
+    header{
+      position:sticky; top:0; z-index:2;
+      background:rgba(0,0,0,.85); backdrop-filter:saturate(140%) blur(6px);
+      border-bottom:1px solid #111; padding:10px var(--pad);
+    }
+    header .row{ display:flex; gap:12px; align-items:center; justify-content:space-between; max-width:960px; margin:0 auto; }
+    .hint{ color:var(--muted); font-size:14px; }
+    .wrap{ max-width:960px; margin:0 auto; padding:var(--pad); }
+    .grid{ display:grid; gap:var(--gap); grid-template-columns:repeat(auto-fit,minmax(110px,1fr)); }
+    .pad, .ctrl{
+      background:var(--card); color:var(--fg); cursor:pointer; user-select:none;
+      display:grid; place-items:center; text-align:center; border:none; border-radius:var(--radius);
+      transition: transform .06s ease, opacity .2s ease, background-color .15s ease;
+    }
+    .pad{ aspect-ratio:1/1; font-weight:600; font-size:22px; }
+    .pad:active{ transform:scale(.98); }
+    .pad.active{ background:var(--card-active); }
+    .ctrl{ padding:12px 14px; background:var(--ctrl); font-weight:600; }
+    .ctrl:hover{ background:var(--ctrl-hover); }
+    .ctrl:active{ transform:scale(.98); }
+    .row2{ display:grid; gap:var(--gap); grid-template-columns:repeat(auto-fit,minmax(160px,1fr)); margin-top:var(--gap); }
+    .err{ color:#ff6b6b; font-size:14px; margin-top:8px; white-space:pre-wrap; }
+    .status{ font-size:13px; color:var(--muted); margin-top:6px; }
+    .overlay{
+      position:fixed; inset:0; z-index:10; background:#000; color:var(--fg);
+      display:flex; align-items:center; justify-content:center; padding:24px; text-align:center; border:3px dashed #222;
+    }
+    .overlay button{
+      border:none; background:#fff; color:#000; padding:12px 18px; font-weight:700; cursor:pointer; border-radius:12px;
+    }
+    .overlay .hint{ color:#bbb; }
+    .pad:focus-visible, .ctrl:focus-visible, .overlay button:focus-visible{ outline:2px solid #888; outline-offset:2px; }
+  </style>
+</head>
+<body>
+  <header>
+    <div class="row">
+      <div><strong>Веб-копия инсталляции</strong></div>
+      <div class="hint">сначала «Включить звук», затем кнопки</div>
+    </div>
+  </header>
+
+  <div class="wrap">
+    <div id="error" class="err" hidden></div>
+
+    <div class="grid" id="pads">
+      <button class="pad" data-idx="0">0</button>
+      <button class="pad" data-idx="1">1</button>
+      <button class="pad" data-idx="2">2</button>
+      <button class="pad" data-idx="3">3</button>
+      <button class="pad" data-idx="4">4</button>
+      <button class="pad" data-idx="5">5</button>
+      <button class="pad" data-idx="6">6</button>
+      <button class="pad" data-idx="7">7</button>
+      <button class="pad" data-idx="8">8</button>
+    </div>
+
+    <div class="row2" style="margin-top:16px">
+      <button id="btn-inhale" class="ctrl">Вдох (all)</button>
+      <button id="btn-random" class="ctrl">Случайные 3</button>
+      <button id="btn-reset" class="ctrl">Сброс</button>
+    </div>
+
+    <div class="status" id="status">Готово</div>
+  </div>
+
+  <div class="overlay" id="gate">
+    <div>
+      <p style="margin-top:0">Браузеры блокируют звук до жеста пользователя.</p>
+      <button id="unlock">Включить звук</button>
+      <div class="hint" style="margin-top:8px">на iPhone снимите беззвучный режим</div>
+    </div>
+  </div>
+
 <script>
 (() => {
   const E  = (sel, root=document) => root.querySelector(sel);
@@ -21,9 +112,9 @@
   const groupOf = i => (i<=2?'low': i<=5?'mid':'high');
   const groups = ['low','mid','high'];
   const MAX_ACTIVE = 3;
-  const FADE_MS = 4000;        // длительность фейда в/из
-  const SAT_LEVEL = 0.8;       // целевая громкость сателлитов
-  const SAT_DELAY_MS = 4000;   // задержка перед включением сателлита (как на Pi)
+  const FADE_MS = 4000;
+  const SAT_LEVEL = 0.8;
+  const SAT_DELAY_MS = 4000;
 
   // состояние
   let ctx, master;
@@ -32,65 +123,48 @@
   let preludePlaying = false;
   let preludeSoftLockUntil = 0;
 
-  // сателлиты
   const sat = {
     low:  { gain:null, buffer:null, timer:0, on:false },
     mid:  { gain:null, buffer:null, timer:0, on:false },
     high: { gain:null, buffer:null, timer:0, on:false }
   };
 
-  // утилиты
-  function setStatus(t){ statusBox && (statusBox.textContent = t); }
+  function setStatus(t){ if(statusBox) statusBox.textContent=t; }
   function showErr(msg){ if(!errBox) return; errBox.hidden=false; errBox.textContent=msg; console.error(msg); }
-
   function nowMs(){ return performance.now(); }
 
-  // инициализация аудио после жеста
   btnUnlock?.addEventListener('click', async () => {
     try{
       if (!ctx){
         ctx = new (window.AudioContext || window.webkitAudioContext)({latencyHint:'interactive'});
         master = ctx.createGain(); master.gain.value = 0.95; master.connect(ctx.destination);
 
-        // основные каналы (по gain на каждый)
+        // основные каналы (gain)
         for (let i=0;i<files.length;i++){
           const g=ctx.createGain();
-          g.gain.value=0.0;
-          g.connect(master);
-          gains[i]=g;
+          g.gain.value=0.0; g.connect(master); gains[i]=g;
         }
-
-        // сателлиты — по gain на каждый
+        // сателлиты (gain)
         for (const k of groups){
           const g=ctx.createGain();
-          g.gain.value=0.0;
-          g.connect(master);
-          sat[k].gain = g;
+          g.gain.value=0.0; g.connect(master); sat[k].gain=g;
         }
 
         setStatus('Загружаю звуки…');
         await loadAllAudio();
 
-        // запустить лупы: 9 основных
+        // запустить вечные лупы (основные)
         for (let i=0;i<files.length;i++){
           const src = ctx.createBufferSource();
-          src.buffer = buffers[i];
-          src.loop = true;
-          src.connect(gains[i]);
-          src.start(0);
+          src.buffer = buffers[i]; src.loop = true; src.connect(gains[i]); src.start(0);
         }
-        // запустить лупы: 3 сателлита
+        // сателлиты — тоже в луп
         for (const k of groups){
           const s = ctx.createBufferSource();
-          s.buffer = sat[k].buffer;
-          s.loop = true;
-          s.connect(sat[k].gain);
-          s.start(0);
+          s.buffer = sat[k].buffer; s.loop = true; s.connect(sat[k].gain); s.start(0);
         }
 
-        // периодическая логика сателлитов
         startSatWatcher();
-
         setStatus('Готово. Нажимайте кнопки.');
       }
       await ctx.resume();
@@ -100,7 +174,6 @@
     }
   });
 
-  // загрузка аудио
   async function fetchBuf(url){
     const r=await fetch(url,{cache:'no-cache'});
     if(!r.ok) throw new Error(url+' → '+r.status+' '+r.statusText);
@@ -111,16 +184,13 @@
     try{
       buffers   = await Promise.all(files.map(decode));
       preludeBuf= await decode(prelude);
-      for (const [k,u] of Object.entries(satFiles)){
-        sat[k].buffer = await decode(u);
-      }
+      for (const [k,u] of Object.entries(satFiles)){ sat[k].buffer = await decode(u); }
     }catch(e){
       showErr('Ошибка загрузки аудио. Проверьте пути и имена файлов.\n'+e.message);
       throw e;
     }
   }
 
-  // фейды
   function fadeTo(param,to,ms=FADE_MS){
     const t=ctx.currentTime;
     param.cancelScheduledValues(t);
@@ -128,7 +198,6 @@
     param.linearRampToValueAtTime(to, t + ms/1000);
   }
 
-  // LRU/активации
   function pushLRU(idx){
     lru = lru.filter(i=>i!==idx); lru.push(idx);
     const g=groupOf(idx);
@@ -156,20 +225,16 @@
     if (total>=MAX_ACTIVE) popOldestGlobal();
 
     const c={low:activeInGroup('low').length, mid:activeInGroup('mid').length, high:activeInGroup('high').length};
-    // 3 одной высоты и включается другая — освобождаем место
     for (const g of groups){ if (c[g]>=3 && g!==gNew){ popOldestFromGroup(g); return; } }
-    // 2+1 и приходит третья — гасим дубль
     if ([c.low,c.mid,c.high].sort().join(',')==='0,1,2' && c[gNew]===0){
       const donor=groups.find(g=>c[g]===2); if(donor){ popOldestFromGroup(donor); return; }
     }
-    // 3 разных и приходит новая той же высоты — заменяем свою
     if (groups.every(g=>c[g]>0) && c[gNew]>0){ popOldestFromGroup(gNew); return; }
   }
 
-  // кнопки-пэды
   function togglePad(idx, el){
     if (!ctx || ctx.state!=='running') return;
-    if (preludePlaying && nowMs()<preludeSoftLockUntil) return;
+    if (preludePlaying && performance.now()<preludeSoftLockUntil) return;
 
     if (active.has(idx)){
       deactivate(idx);
@@ -182,7 +247,6 @@
     }
   }
 
-  // вспомогательные кнопки
   function random3(){
     const arr=[...Array(9).keys()].sort(()=>Math.random()-0.5).slice(0,3);
     arr.forEach(i=>{
@@ -197,7 +261,6 @@
 
   function resetAll(){
     [...active].forEach(deactivate);
-    // погасить сателлиты и сбросить таймеры
     for (const k of groups){
       fadeTo(sat[k].gain.gain, 0.0);
       sat[k].timer = 0;
@@ -208,20 +271,17 @@
   async function inhale(){
     if (preludePlaying) return;
     preludePlaying=true;
-    preludeSoftLockUntil = nowMs() + 10000; // первые 10 сек блокируем пэды
+    preludeSoftLockUntil = performance.now() + 10000;
 
     resetAll();
     await new Promise(r=>setTimeout(r,300));
 
-    // один прогон all.mp3 с мягким входом/выходом
     const src=ctx.createBufferSource();
     src.buffer=preludeBuf;
-    const g=ctx.createGain();
-    g.gain.value=0.0;
+    const g=ctx.createGain(); g.gain.value=0.0;
     src.connect(g); g.connect(master);
     src.start(0);
 
-    // fade-in/out прелюдии
     const t=ctx.currentTime, dur=preludeBuf.duration;
     g.gain.setValueAtTime(0, t);
     g.gain.linearRampToValueAtTime(1.0, t+0.2);
@@ -232,47 +292,39 @@
     setStatus('Вдох…');
   }
 
-  // логика сателлитов (как на Pi)
   function startSatWatcher(){
     const tick = () => {
       if (!ctx) return;
-      const t = nowMs();
+      const t = performance.now();
 
       for (const k of groups){
         const count = activeInGroup(k).length;
         const st = sat[k];
-
         if (count >= 3){
-          if (st.timer === 0) st.timer = t; // старт отсчёта
+          if (st.timer === 0) st.timer = t;
           const dt = t - st.timer;
           if (!st.on && dt >= SAT_DELAY_MS){
-            // включаем сателлит
             fadeTo(st.gain.gain, SAT_LEVEL);
             st.on = true;
           }
         } else {
-          // условие пропало — гасим и сбрасываем таймер
           if (st.on){
             fadeTo(st.gain.gain, 0.0);
             st.on = false;
-          } else {
-            // если ещё не включился — просто прогарантировать 0
-            // (но без резкого обрыва — пусть текущий фейд дойдёт)
           }
           st.timer = 0;
         }
       }
-
-      // следующий тик
       setTimeout(tick, 100);
     };
     tick();
   }
 
-  // навешиваем обработчики
   EA('.pad').forEach(el=>el.addEventListener('click',()=>togglePad(+el.dataset.idx, el)));
   E('#btn-random')?.addEventListener('click',random3);
   E('#btn-reset') ?.addEventListener('click',resetAll);
   E('#btn-inhale')?.addEventListener('click',inhale);
 })();
 </script>
+</body>
+</html>
